Fix alignment issues

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -133,6 +133,7 @@ main {
 }
 
 .nft-content {
+    margin-bottom: 1.8rem;
     font-family: "outfit", sans-serif;
     font-weight: 300;
     font-size: 1.5rem;
@@ -160,7 +161,7 @@ main {
         top: 50%;
         display: inline-block;
         width: 2rem;
-        height: 1.5rem;
+        height: 1.6rem;
         background: url(../images/icon-ethereum.svg) left/1.5rem no-repeat;
         background-size: 1rem;
         content: "";
@@ -182,7 +183,7 @@ main {
         left: 3.8rem;
         display: inline-block;
         width: 3rem;
-        height: 1.5rem;
+        height: 1.6rem;
         background: url(../images/icon-clock.svg) center/1.5rem no-repeat;
         content: "";
         transform: translateY(-50%);
@@ -190,7 +191,8 @@ main {
 }
 
 .nft-component-footer {
-    display: flex;
+    display: grid;
+    grid-template-columns: 40px 1fr;
     align-items: center;
 
     &::after {
@@ -212,7 +214,6 @@ main {
     font-family: 'outfit', sans-serif;
     font-size: 1.5rem;
     color: $soft-blue;
-    line-height: 5rem;
     text-align: left;
 }
 
@@ -227,6 +228,7 @@ main {
 */
 
 .nft-title {
+    margin-bottom: 1.8rem;
     font-family: "outfit", sans-serif;
     font-weight: 600;
     font-size: 2.1rem;
